# RocketOS

./: .gitignore  Makefile
docs/: conf.typ  main.typ
docs/components/: typography.typ
docs/content/: arch.typ  conclusion.typ  filesystem.typ  general.typ  memory.typ  net.typ  signal.typ  thread.typ
img/: Makefile
os/: .gdb_history  Cargo.toml  Makefile  build.rs  rustc-ice-2025-04-24T07_16_51-28133.txt  rustc-ice-2025-05-28T02_24_22-5383.txt  rustc-ice-2025-05-28T02_24_31-5954.txt  rustc-ice-2025-05-31T13_24_27-6194.txt  rustc-ice-2025-06-03T11_17_57-6742.txt  rustc-ice-2025-06-03T11_18_14-7123.txt  rustc-ice-2025-06-03T11_19_28-7548.txt  rustc-ice-2025-06-03T11_20_17-8025.txt
os/src/: config.rs  linker.ld  linker_loongarch.ld  main.rs  timer.rs
os/src/arch/: mod.rs
os/src/ext4/: block_group.rs  block_op.rs  dentry.rs  extent_tree.rs  fs.rs  inode.rs  mod.rs  super_block.rs
os/src/fat32/: fs.rs  inode.rs
os/src/fs/: dentry.rs  fd_set.rs  fdtable.rs  file.rs  inode.rs  inode_trait.rs  mod.rs  mount.rs  namei.rs  os_inode.rs  os_inode_old.rs  page_cache.rs  path copy.rs  path.rs  pipe.rs  stdio.rs  super_block.rs  uio.rs
os/src/futex/: futex.rs  mod.rs
os/src/mm/: memory_set.rs  mod.rs  page.rs
os/src/mutex/: spin_mutex.rs
os/src/net/: addr.rs  alg.rs  listentable.rs  loopback.rs  mod.rs  socket.rs  socketpair.rs  tcp.rs  udp.rs  unix.rs
os/src/signal/: mod.rs  sigFrame.rs  sigHandler.rs  sigStack.rs  sig_struct.rs
os/src/syscall/: errno.rs  fs.rs  fs_old.rs  mm.rs  mod.rs  (+4 more)
user/: Cargo.toml  Makefile
user/src/: lib.rs  linker.ld  syscall.rs
(+53 files in other folders)
